# distiller

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile.bot  Dockerfile.diffords  Dockerfile.scraper  README.md  TESTING_REPORT.md  bot.py  cloudbuild.yaml  com.distiller.bot.plist  com.distiller.bot.plist.example  com.distiller.diffords.plist  com.distiller.diffords.plist.example  com.distiller.scraper.plist  com.distiller.scraper.plist.example  dev.ipynb  dev.py  distiller_scraper_improved.py  distiller_selenium_scraper.py  distiller_spirits_reviews.csv  ingredient_mapping.json  pyproject.toml  pytest.ini  query.py  requirements.txt  run.py  run_diffords.py  run_final_scraper.py  run_phase1.py  run_selenium_phase1.py  setup.py
.github/workflows/: deploy.yml  test.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-baseline.txt  task-1-pytest.txt  (+20 more)
configs/: crawler_config.yaml  data_config.yaml  model_config.yaml
distiller_scraper/: __init__.py  api_client.py  cocktail_db.py  config.py  diffords_config.py  diffords_scraper.py  diffords_selectors.py  diffords_storage.py  flavor_parser.py  gcs_storage.py  notify.py  recommender.py  scraper.py  selectors.py  storage.py
docs/: CODE_QUALITY_SUMMARY.md  CODE_REVIEW.md  EXPLANATION_GUIDE.md  FIXES_APPLIED.md  IMPROVEMENT_PLAN.md  QUICK_REFERENCE.md  USAGE_GUIDE.md
scripts/: deploy_gcp.sh  run_bot.sh  run_diffords.sh  run_scraper.sh  supplement_liqueurs.py
tasks/: cocktail-recommender-plan.md
tests/: __init__.py  conftest.py  test_crawler_fixes.py  test_fixes_quick.py
(+45 files in other folders)
